--- a/src/components/auth/login/Login.module.css
+++ b/src/components/auth/login/Login.module.css
@@ -95,3 +95,9 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+@media screen and (max-width: 600px) {
+  .container {
+    margin-top: 18px;
+    padding: 15px;
+  }
+}
