--- a/src/components/auth/register/Register.module.css
+++ b/src/components/auth/register/Register.module.css
@@ -109,3 +109,9 @@
 .margin25 {
   margin-top: 25px;
 }
+@media screen and (max-width: 600px) {
+  .container {
+    margin-top: 18px;
+    padding: 15px;
+  }
+}
