--- a/src/components/elements/select/Select.module.css
+++ b/src/components/elements/select/Select.module.css
@@ -1,9 +1,10 @@
 .custom_select {
-  font-weight: 500;
-  font-size: 14px;
-  width: 100%;
+    font-weight: 500;
+    font-size: 14px;
+    width: 100%;
 }
 
 .Select-option:nth-child(n + 6) {
-  display: none;
+    display: none;
+    border-radius: 5px;
 }
