--- a/src/components/systemAdminPage/SystemAdminPage.module.css
+++ b/src/components/systemAdminPage/SystemAdminPage.module.css
@@ -9,7 +9,7 @@
 
 .search_container {
     display: flex;
-    width: 400px;
+    gap:5px;
     background: lightgray;
     padding: 5px;
     padding-bottom: 0px;
@@ -29,4 +29,21 @@
     margin-top: 7px;
     height: 50px;
     width: 150px;
+}
+
+.pagination{
+    display: flex;
+    justify-content:center;
+}
+
+.search_container input {
+    height: 45px;
+}
+
+.select{
+    width: 200px;
+}
+
+.card_container{
+    min-height:600px;
 }
