--- a/src/components/elements/tabs/Tabs.module.css
+++ b/src/components/elements/tabs/Tabs.module.css
@@ -6,9 +6,8 @@
   margin: 0 auto;
   margin-top: 20px;
   padding-bottom: 10px;
-  @media (max-width: 769px) {
-    padding: 2rem 0;
-  }
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 ul.nav {
@@ -38,11 +37,10 @@ ul.nav li {
   text-align: center;
   cursor: pointer;
   color: white;
-  opacity: 0.6;
 }
 
 ul.nav li:hover {
-  background: darkgray;
+  background: #52a4a3;
   opacity: 1;
 }
 
@@ -85,4 +83,18 @@ ul.nav li.active {
 
 .sort_col {
   width: 250px;
+}
+@media only screen and (max-width: 1100px) {
+  .tabContent {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (max-width: 650px) {
+  .tabContent {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .tabs {
+    height: auto;
+    max-height: fit-content;
+  }
 }
