--- a/src/components/project/Project.module.css
+++ b/src/components/project/Project.module.css
@@ -1,14 +1,23 @@
-.wrapper{
-    display: flex;
-    flex-direction: column;
+.wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
-.container{
-    display:flex;
-    justify-content: center;
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-.tab_container{
-    width: 100%;
-    max-width:1200px;
+.tab_container {
+  width: 100%;
+  max-width: 1200px;
+  box-shadow: 0px 30px 75px -30px hsl(229deg 6% 66%);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .tab_container {
+    width: 90%;
+  }
 }
