--- a/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
+++ b/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
@@ -1,92 +1,106 @@
 .container {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 1200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
 }
-.wrapper{
+.wrapper {
   background-color: rgb(211, 211, 211, 0.3);
   justify-content: center;
-  display:flex;
+  display: flex;
 }
 .logo_container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .title {
-    font-size: 22px;
+  font-size: 22px;
 }
 .paragraph {
-    opacity: 50%;
-    font-size: 14px;
-    inline-size: 400px;
-    overflow-wrap: break-word;
+  opacity: 50%;
+  font-size: 14px;
+  overflow-wrap: break-word;
 }
 .logo {
-    object-fit: cover;
-    height: 60px;
-    width: 60px;
-    border-radius:100%;
-    background-color:white;
+  object-fit: cover;
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
+  background-color: white;
+}
+.avatarEmployeeContainer img:not(:first-child) {
+  margin-left: -10px;
 }
 
 .profile_picture {
   object-fit: cover;
   height: 40px;
   width: 40px;
-  border-radius:100%;
-  background-color:white;
+  border-radius: 100%;
+  background-color: white;
+}
+.headInfo {
+  margin-bottom: 5px;
 }
 .info {
-    display: flex;
-    align-items: flex-start;
-    gap:30px;
-    margin:15px 0px;
+  display: flex;
+  align-items: flex-start;
+  gap: 30px;
+  margin: 15px 0px;
 }
 .more {
-    opacity: 50%;
-    margin-top: 10px;
-    margin-left: 5px;
+  opacity: 50%;
+  margin-top: 10px;
+  margin-left: 5px;
 }
-.employees{
+.employees {
   display: flex;
   align-items: center;
 }
-.text{
-  margin-left:20px;
+.text {
+  margin-left: 20px;
 }
 @media only screen and (max-width: 980px) {
-    .container {
-        display: grid;
-        grid-template-columns: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .info {
-        margin-top: 40px;
-    }
-    .logo_container {
-        justify-content: center;
-    }
+  .container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .info {
+    margin-top: 30px;
+  }
+  .logo_container {
+    justify-content: center;
+    margin-top: 15px;
+  }
 }
 @media only screen and (max-width: 740px) {
-    .info {
-        margin-right: 0;
-    }
+  .info {
+    margin-right: 0;
+    justify-content: space-evenly;
+    margin-left: 5px;
+  }
+  .profile_picture {
+    height: 30px;
+    width: 30px;
+  }
+  .title {
+    font-size: 20px;
+  }
 }
 @media only screen and (max-width: 640px) {
-    .logo {
-        padding-left: 0px;
-    }
+  .logo {
+    padding-left: 0px;
+  }
+  .headInfo {
+    font-size: 14px;
+  }
 }
 @media only screen and (max-width: 500px) {
-    .container {
-        display: inline-block;
-        margin-left: -20px;
-    }
-    .paragraph {
-        font-size: 12px;
-        inline-size: 200px;
-    }
+  .container {
+    display: inline-block;
+  }
+  .paragraph {
+    font-size: 14px;
+  }
 }
