--- a/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
+++ b/src/components/elements/navigation/subHeaderEmployee/SubHeaderEmployee.module.css
@@ -65,13 +65,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 15px 0px;
   }
   .info {
-    margin-top: 30px;
+    margin: 20px 0px 0px 0px;
   }
   .logo_container {
     justify-content: center;
-    margin-top: 15px;
   }
 }
 @media only screen and (max-width: 740px) {
