--- a/src/components/elements/filePreview/FilePreview.module.css
+++ b/src/components/elements/filePreview/FilePreview.module.css
@@ -1,30 +1,31 @@
-.container{
-    width:100%;
-    height:120px;
-    cursor: pointer;
-    position: relative;
+.container {
+  width: 100%;
+  height: 120px;
+  cursor: pointer;
+  position: relative;
 }
 
-.container:hover .preview{
-    filter: brightness(75%);
+.container:hover .preview {
+  filter: brightness(75%);
 }
 
-.container:hover .title{
-    display: block;
+.container:hover .title {
+  display: block;
 }
 
-.preview{
-    width:100%;
-    height:120px;
-    object-fit: cover;
-    border:1px solid black;
+.preview {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+  border: 1px solid lightgray;
+  border-radius: 10px;
 }
 
-.title{
-    display:flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    color:white;
-    display:none;
+.title {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  display: none;
 }
