--- a/src/components/note/Note.module.css
+++ b/src/components/note/Note.module.css
@@ -1,103 +1,131 @@
-.wrapper{
-    position: absolute;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color:rgba(0,0,0,0.40);
-    color:#001628;
-    overflow-y: scroll;
+.wrapper {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #001628;
+  overflow-y: scroll;
+  align-items: center;
 }
 
 .wrapper::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-.container{
-    display: flex;
-    position: relative;
-    padding:20px;
-    flex-direction: column;
-    width: 875px;
-    background-color:white;
-    margin-top: 100px;
-    margin-bottom: 100px;
+.container {
+  display: flex;
+  position: relative;
+  padding: 20px;
+  flex-direction: column;
+  width: 875px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 30px 75px -30px hsl(229deg 6% 66%);
+  border-top: 10px solid rgb(49, 151, 149);
 }
 
-.row{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.row_center{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    margin-top: 10px;
+.row_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+.subheaders {
+  font-weight: 700;
+}
+.subheadersInfo {
+  font-weight: 500;
+}
+.exit_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
 }
 
-.exit_container{
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    cursor: pointer;
-    height:40px;
-    width:40px;
-    border-radius: 100%;
+.exit_container:hover {
+  background-color: rgb(231, 231, 231);
 }
 
-.exit_container:hover{
-    background-color:red;
+.exit_button {
+  width: 20px;
+  height: 20px;
 }
 
-.exit_button{
-    width: 20px;
-    height: 20px;
+.file_container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin: 10px 0;
+  width: 100%;
 }
 
-.file_container{
-    display: grid;
-    grid-template-columns:repeat(4,1fr);
-    gap:10px;
-    margin:10px 0;
-    width:100%;
+.title_container {
+  font-size: 35px;
+  font-weight: 800;
 }
 
-.title_container{
-    font-size: 35px;
-    font-weight:800;
+.project_container {
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
 }
 
-.project_container{
-    font-size: 20px;
-    font-weight:600;
-    margin-top:10px;
+.description_container {
+  width: 100%;
 }
 
-.description_container{
-    width: 100%;
+.category_container {
+  font-size: 17px;
+  font-weight: 400;
+  margin-top: 10px;
 }
 
-.category_container{
-    font-size: 17px;
-    font-weight:400;
-    margin-top:10px;
+.description_container_title {
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 10px;
 }
 
-.description_container_title{
-    font-size: 18px;
-    font-weight:600;
-    margin-top:10px;
+.description_container_text {
+  margin-top: 10px;
+  border: 1px solid lightgrey;
+  padding: 15px 10px;
+  border-radius: 5px;
 }
-
-.description_container_text{
-    margin-top:10px;
-    border: 1px solid black;
-    padding:5px;
+@media only screen and (max-width: 900px) {
+  .container {
+    margin: 0px 5px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .file_container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .title_container {
+    font-size: 28px;
+  }
+  .wrapper {
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .file_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
