--- a/src/components/elements/fileModal/FileModal.module.css
+++ b/src/components/elements/fileModal/FileModal.module.css
@@ -1,75 +1,72 @@
 .wrapper {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.75);
-    color: #001628;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #001628;
 }
 
-.image_container{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.image_container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.image_container img{
-    max-height: 100vh;
-    padding:25px;
+.image_container img {
+  max-height: 100vh;
+  padding: 25px;
 }
 
 .pdf_container {
-    display: flex;
-    position: relative;
-    padding: 20px;
-    flex-direction: column;
-    background-color: rgba(0,0,0,0);
-    height: 100%;
-    max-height: 900px;
-    overflow: auto;
+  display: flex;
+  position: relative;
+  padding: 20px;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0);
+  height: 100%;
+  max-height: 900px;
+  overflow: auto;
 }
 
 .pdf_container:hover {
-    cursor: -moz-zoom-in;
-    cursor: -webkit-zoom-in;
-    cursor: zoom-in;
+  cursor: -moz-zoom-in;
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
 }
 
 .pdf_container::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-.button_container{
-    position: absolute;
-    top: 0;
-    right: 0;
-    display:flex;
+.button_container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
 }
 
-.button:hover{
-    background-color:red;
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  margin-top: 20px;
+  margin-right: 20px;
+  /* background-color: purple; */
+  color: white;
 }
 
-.button{
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    cursor: pointer;
-    height:40px;
-    width:40px;
-    border-radius: 100%;
-    margin-top: 20px;
-    margin-right: 20px;
-    background-color:purple;
-}
-
-.surprise{
-    color:white;
-    font-size: 34px;
+.surprise {
+  color: white;
+  font-size: 34px;
 }
