--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,49 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;600;800&display=swap");
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+*,
+*:before,
+*:after {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 * {
-  font-family: "Manrope";
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    font-family: "Manrope";
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 .wrapper {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
-a{
+a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
 
 .react-pdf__Page {
     margin-top: 20px;
-    border:1px solid black;
+    border: 1px solid black;
 }
