--- a/src/components/elements/createNoteTab/CreateNoteTab.module.css
+++ b/src/components/elements/createNoteTab/CreateNoteTab.module.css
@@ -1,112 +1,131 @@
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px 10px;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 200px);
-    width: 100%;
-    max-width: 1200px;
-    margin-top: 30px;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  /* height: calc(100vh - 200px); */
+  width: 100%;
+  max-width: 1200px;
+  margin-top: 30px;
+  border: 1px solid lightgrey;
+  background: whitesmoke;
+  box-shadow: 0px 30px 75px -30px hsl(229deg 6% 66%);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-    background-image: linear-gradient(
-        90deg,
-        #cbd5e0 0%,
-        #e2e8f0 19%,
-        #edf2f7 36%,
-        #cbd5e0 55%,
-        #edf2f7 79%,
-        #edf2f7 100%
-    );
-    margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  padding: 10px 0px;
+  background-color: #319795;
+  margin-bottom: 10px;
 }
 
 .nav {
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    margin: 0px 10px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  color: white;
 }
-
+.backBtn {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  color: white;
+  margin: 0px 10px;
+}
 .nav span {
-    font-weight: 500;
-    font: size 18px;
-    margin-left: 10px;
+  font-weight: 500;
+  font: size 18px;
+  margin-left: 10px;
+  color: white;
 }
 
 .input_label {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.input_title{
-    display: flex;
-    align-items: center;
-    font-weight:600;
-    margin:10px 0px;
+.input_title {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  margin: 10px 0px;
 }
 
 .input_label_two {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
 }
 
 .file_row {
-    display: flex;
-    gap:10px;
+  display: flex;
+  gap: 10px;
 }
 
 .layout {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    padding: 0px 60px 0px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+  padding: 0px 60px 0px 60px;
 }
 
 .category_list {
-    padding-left: 15px;
-    width: 170px;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid lightgray;
+  padding-left: 15px;
+  width: 170px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
 }
 
 .btn {
-    width: 100px;
-    height: 30px;
-    background-color: #4987f2;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    color: #fff;
+  width: 100px;
+  height: 30px;
+  background-color: #4987f2;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #fff;
 }
 
 .btn:hover {
-    cursor: pointer;
-    filter: brightness(120%);
+  cursor: pointer;
+  filter: brightness(120%);
 }
 
 .btn_position {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 25px;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 25px;
 }
 
 .data_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+@media only screen and (max-width: 800px) {
+  .input_label_two {
+    width: 50%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .input_label_two {
+    width: 100%;
+  }
+  .layout {
+    padding: 0px 20px 0px 20px;
+  }
+  .nav {
+    font-size: 18px;
+  }
 }
