--- a/src/components/elements/file/File.module.css
+++ b/src/components/elements/file/File.module.css
@@ -1,90 +1,91 @@
 .input {
-    display: none;
+  display: none;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .attach_container {
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    height: 200px;
-    overflow-y: scroll;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  min-height: 100px;
+  height: auto;
+  overflow-y: scroll;
+  margin-bottom: 15px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .card {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: gray;
-    margin: 5px 20px;
-    height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #319795;
+  color: white;
+  margin: 5px 20px;
+  padding: 3px 0px;
 }
 
 .card_col_one {
-    display: flex;
-    align-items: flex-end;
-    margin-left: 20px;
+  display: flex;
+  align-items: flex-end;
+  margin-left: 20px;
 }
 
 .card_col_two {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .size {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .remove {
-    color: red;
-    cursor: pointer;
+  color: white;
+  cursor: pointer;
 }
 
-.attach_container {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
 .attach_container::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .button {
-    width: 100px;
-    height: 30px;
-    background-color: #4987f2;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    color: #fff;
+  width: 100px;
+  height: 30px;
+  background-color: #4987f2;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #fff;
 }
 
-.avatar{
-    width: 100px;
-    height: 30px;
-    border: none;
-    outline: none;
-    color: black;
-    cursor: pointer;
-    font-size: 21px;
-    font-weight:600;
-    background-color:transparent;
+.avatar {
+  width: 100px;
+  height: 30px;
+  border: none;
+  outline: none;
+  color: black;
+  cursor: pointer;
+  font-size: 21px;
+  font-weight: 600;
+  background-color: transparent;
 }
 
-.avatar:hover{
-    text-decoration: underline;
+.avatar:hover {
+  text-decoration: underline;
 }
 
-.project{
-    cursor: pointer;
-    border-radius: 5px;
-    padding: 4px 10px;
-    border: 1px solid lightgrey;
-    background-color:white;
-    font-size: 14px;
+.project {
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 4px 10px;
+  border: 1px solid lightgrey;
+  background-color: white;
+  font-size: 14px;
 }
