--- a/src/components/elements/tabs/Tabs.module.css
+++ b/src/components/elements/tabs/Tabs.module.css
@@ -44,12 +44,14 @@ ul.nav li {
 }
 
 ul.nav li:hover {
-  background: #52a4a3;
+  background-color:#319795;
+  filter:brightness(1.2);
   opacity: 1;
 }
 
 ul.nav li.active {
-  background: darkgray;
+  background-color:#319795;
+  filter:brightness(1.2);
   opacity: 1;
 }
 
@@ -88,6 +90,18 @@ ul.nav li.active {
 .sort_col {
   width: 250px;
 }
+
+.message{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  width:100%;
+  margin-top:200px;
+  font-size: 34px;
+  font-weight:600;
+  color:rgba(0,0,0,0.5);
+}
+
 @media only screen and (max-width: 1100px) {
   .tabContent {
     grid-template-columns: repeat(2, 1fr);
