--- a/src/components/elements/fileModal/FileModal.module.css
+++ b/src/components/elements/fileModal/FileModal.module.css
@@ -1,108 +1,91 @@
 .wrapper {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.75);
-  color: #001628;
-}
-
-.image_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.image_container img {
-  width: 90%;
-  padding: 25px;
-}
-
-.pdf_container {
-  display: flex;
-  position: relative;
-  padding: 20px;
-  flex-direction: column;
-  background-color: rgba(0, 0, 0, 0);
-  height: 100%;
-  max-height: 900px;
-  overflow: auto;
-}
-
-.pdf_container:hover {
-  cursor: -moz-zoom-in;
-  cursor: -webkit-zoom-in;
-  cursor: zoom-in;
-}
-
-.pdf_container::-webkit-scrollbar {
-  display: none;
-}
-
-.button_header_container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-between;
-  padding: 0px 0px 0px 20px;
-  background-color: rgb(49, 151, 149);
-}
-.button_container {
-  display: flex;
-}
-.headerContainer {
-  color: white;
-  font-size: 24px;
-}
-.arrow {
-  cursor: pointer;
-  color: white;
-  height: 30px;
-  width: 30px;
-}
-
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  height: 30px;
-  width: 30px;
-  margin: 20px;
-  color: white;
-}
-
-.surprise {
-  color: white;
-  font-size: 34px;
-}
-
-.central_container {
-  width: 90%;
-  display: flex;
-  justify-content: center;
-}
-
-.arrow_container {
-  width: 10%;
-  display: flex;
-  justify-content: center;
-}
-@media only screen and (max-width: 600px) {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: #001628;
+  }
+  
+  .image_container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  
   .image_container img {
-    padding: 5px;
+    max-height: 100vh;
+    padding: 25px;
   }
-  .arrow {
-    height: 20px;
-    width: 20px;
+  
+  .pdf_container {
+    display: flex;
+    position: relative;
+    padding: 20px;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0);
+    height: 100%;
+    max-height: 900px;
+    overflow: auto;
   }
-}
+  
+  .pdf_container:hover {
+    cursor: -moz-zoom-in;
+    cursor: -webkit-zoom-in;
+    cursor: zoom-in;
+  }
+  
+  .pdf_container::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .button_container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    background-color: rgb(49, 151, 149);
+  }
+  
+  .arrow{
+      cursor: pointer;
+      color:white;
+  }
+  
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    margin: 20px;
+    /* background-color: purple; */
+    color: white;
+  }
+  
+  .surprise {
+    color: white;
+    font-size: 34px;
+  }
+  
+  .central_container{
+      width: 90%;
+      display: flex;
+      justify-content:center;
+  }
+  
+  .arrow_container{
+      width: 10%;
+      display: flex;
+      justify-content:center;
+  }
