--- a/src/components/elements/userCard/UserCard.module.css
+++ b/src/components/elements/userCard/UserCard.module.css
@@ -1,19 +1,73 @@
+.avatar {
+  grid-area: avatar;
+}
+.name {
+  grid-area: name;
+}
+.surname {
+  grid-area: surname;
+}
+.email {
+  grid-area: email;
+}
+.role {
+  grid-area: role;
+}
+.delete {
+  grid-area: delete;
+}
+
 .container {
-    border-radius:5px;
-    width: 1200px;
-    display:grid;
-    cursor: pointer;
-    grid-template-columns: repeat(6, 1fr);
-    align-items: center;
-    margin: 10px auto;
-    padding:7px;
-    background-color: rgb(170, 158, 158);
+  border-radius: 5px;
+  width: 100%;
+  display: grid;
+  cursor: pointer;
+  grid-template-columns: 0.5fr repeat(2, 1fr) 1.5fr 1fr 0.5fr;
+  grid-template-areas: "avatar name surname email role delete";
+  align-items: center;
+  margin: 10px auto;
+  border-top: 3px solid rgb(49, 151, 149);
+  background-color: white;
+  box-shadow: 0px 30px 38px 5px hsl(229deg 6% 66%);
+  word-wrap: break-word;
+  word-break: break-all;
+}
+.container div {
+  padding: 7px;
+}
+.container div:last-child {
+  display: flex;
+  justify-content: center;
+}
+.container div:not(:last-child) {
+  color: black;
 }
 
 .logo {
-    height: 50px;
-    width: 50px;
-    background-color:white;
-    object-fit: cover;
-    border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  object-fit: cover;
+  border-radius: 100%;
+}
+@media only screen and (max-width: 960px) {
+  .container {
+    grid-template-columns: 0.5fr repeat(2, 1fr) 1.5fr 0.5fr 0.5fr;
+    grid-template-areas: "avatar name surname email role delete";
+  }
+  .container div:nth-last-child(-n + 2) {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 760px) {
+  .container div:not(:nth-last-child(2)) {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .container {
+    grid-template-columns: 0.5fr repeat(2, 1fr) 0.5fr;
+    grid-template-areas: "avatar name surname role" "avatar email email delete";
+  }
 }
