--- a/src/components/elements/file/File.module.css
+++ b/src/components/elements/file/File.module.css
@@ -11,7 +11,7 @@
 .attach_container {
   width: 100%;
   border: 1px solid lightgrey;
-  background-color:white;
+  background-color: white;
   border-radius: 5px;
   min-height: 100px;
   height: auto;
@@ -57,9 +57,10 @@
 }
 
 .button {
-  width: 100px;
+  /* width: 100px;
   height: 30px;
-  background-color: #4987f2;
+  background-color: #4987f2; */
+  padding: 5px 15px;
   border: none;
   outline: none;
   border-radius: 5px;
@@ -73,7 +74,7 @@
   outline: none;
   color: black;
   cursor: pointer;
-  font-size: 21px;
+  /* font-size: 21px; */
   font-weight: 600;
   background-color: transparent;
 }
