--- a/src/components/elements/editAccountPage/EditAccountPage.module.css
+++ b/src/components/elements/editAccountPage/EditAccountPage.module.css
@@ -7,15 +7,14 @@
   margin-top: 20px;
   display: flex;
   justify-content: flex-start;
-  padding: 15px 30px;
-  width: 100%;
-  max-width: 1100px;
+  padding: 20px 30px;
+  width: 60%;
   background-color: #c7e0d6;
   border-radius: 5px;
 }
 
-.password_information {
-  /* width: 50%; */
+.role {
+  text-align: center;
 }
 
 .acc_informations {
@@ -66,12 +65,11 @@
 .logo_container {
   position: relative;
   margin: 15px 0px;
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
   border-radius: 100%;
   cursor: pointer;
   background-size: cover;
-  z-index: 1;
 }
 .camera_thumb {
   position: absolute;
@@ -120,7 +118,6 @@
 .section_two {
   width: 100%;
   margin-left: 40px;
-  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -129,6 +126,7 @@
 .user_name {
   font-weight: 800;
   font-size: 25px;
+  text-align: center;
 }
 
 .button_section {
@@ -148,4 +146,42 @@
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
+}
+@media only screen and (max-width: 1100px) {
+  .wrapper {
+    margin: 0px 20px;
+  }
+  .container {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .logo_container {
+    height: 100px;
+    width: 100px;
+  }
+  .container {
+    padding: 15px 15px;
+  }
+
+  .title_label {
+    font-size: 24px;
+  }
+  .user_name {
+    font-size: 22px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .container {
+    flex-direction: column;
+  }
+  .section_two {
+    margin-left: 0px;
+    margin-bottom: 0px;
+  }
+  .section_one {
+    margin-bottom: 10px;
+    align-items: flex-start;
+  }
 }
