--- a/src/components/systemAdminPage/SystemAdminPage.module.css
+++ b/src/components/systemAdminPage/SystemAdminPage.module.css
@@ -10,11 +10,19 @@
   gap: 5px;
 }
 
+.row{
+    width: 70%;
+    gap: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 20px;
 }
 
 .searchBar {
