--- a/src/components/elements/tabs/Tabs.module.css
+++ b/src/components/elements/tabs/Tabs.module.css
@@ -44,14 +44,14 @@ ul.nav li {
 }
 
 ul.nav li:hover {
-  background-color:#319795;
-  filter:brightness(1.2);
+  background-color: #319795;
+  filter: brightness(1.2);
   opacity: 1;
 }
 
 ul.nav li.active {
-  background-color:#319795;
-  filter:brightness(1.2);
+  background-color: #319795;
+  filter: brightness(1.2);
   opacity: 1;
 }
 
@@ -91,15 +91,15 @@ ul.nav li.active {
   width: 250px;
 }
 
-.message{
+.message {
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
-  width:100%;
-  margin-top:200px;
-  font-size: 34px;
-  font-weight:600;
-  color:rgba(0,0,0,0.5);
+  width: 100%;
+  margin-top: 200px;
+  font-size: 30px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 1100px) {
